Added custom font, logo, and conditional formatting to play/pause button

--- a/src/app.css
+++ b/src/app.css
@@ -3,18 +3,29 @@
 @tailwind utilities;
 
 @layer base {
-  * {
-    box-sizing: border-box;
-  }
+	@font-face {
+		font-family: 'NHaasGroteskRg';
+		src: url('./fonts/NHaasGroteskTXPro-55Rg.ttf') format('truetype');
+	}
 
-  html,
-  body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: black;
-    color: white;
-  }
+	@font-face {
+		font-family: 'NHaasGroteskBld';
+		src: url('./fonts/NHaasGroteskTXPro-75Bd.ttf') format('truetype');
+	}
+
+	* {
+		box-sizing: border-box;
+		font-family: 'NHaasGroteskRg', sans-serif;
+	}
+
+	html,
+	body {
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		background-color: black;
+		color: white;
+	}
 }
